# Graphin

./: README.md  io.github.Graphin.json  meson.build
build-aux/flatpak/: io.github.Graphin.json
data/: io.github.Graphin.desktop.in  io.github.Graphin.gresource.xml  io.github.Graphin.gschema.xml  io.github.Graphin.metainfo.xml.in  meson.build  style.css
data/icons/: meson.build
data/ui/: chart.blp  window.blp
po/: POTFILES  meson.build
src/: application.vala  chart-axis.vala  chart-drawable.vala  chart-extremes.vala  chart-gesture-handler.vala  chart-grid.vala  chart-parameters.vala  chart-serie.vala  chart.vala  graphin.gresource.xml  main.vala  meson.build  point.vala  window.ui  window.vala
src/layouts/: chart-bar-serie.vala  chart-bar.vala  chart-item.vala  chart-line-serie.vala
src/layouts/chart-bar/: chart-bar-serie.vala  chart-bar.vala
